--- a/packages/mdline/test/snapshots/example/output.html
+++ b/packages/mdline/test/snapshots/example/output.html
@@ -44,7 +44,7 @@
                 <h2 class="svelte-1t2uafz">Abandoned ECMAScript 4</h2>
                 <p>Fourth Edition was abandoned, due to political differences concerning language complexity. Many features proposed for the Fourth Edition have been completely dropped; some were incorporated into the sixth edition.</p>
 
-                <span class="cd-timeline__date svelte-1t2uafz">2000-01</span>
+                <span class="cd-timeline__date svelte-1t2uafz">2000-01 - 2007-10-23</span>
             </div>
         </div><div class="cd-timeline__block js-cd-block svelte-1t2uafz">
             <div class="cd-timeline__img cd-timeline__img--movie js-cd-img svelte-1t2uafz">
